# ngc-learn

ngc_inference/: .cursorrules  .gitignore  ORCHESTRATOR_VERIFICATION_REPORT.md  QUICK_START.md  README.md  pyproject.toml
ngc_inference/configs/: README.md  experiment_template.yaml  hierarchical_inference.yaml  simple_prediction.yaml
ngc_inference/docs/: API.md  ORGANIZATION_SUMMARY.md  README.md  comprehensive_status.md  executive_summary.md  final_checklist.md  index.md  installation.md  project_summary.md  quickstart.md  theory.md  verification_report.md
ngc_inference/scripts/: README.md  run_active_inference_example.py  run_active_inference_tmaze.py  run_hierarchical_example.py  run_ngc_inference.py  run_simple_example.py  setup_environment.sh  verify_installation.py
ngc_inference/src/: README.md
ngc_inference/src/ngc_inference/: __init__.py
ngc_inference/src/ngc_inference/core/: README.md  __init__.py  active_inference_agent.py  free_energy.py  inference.py  transition_model.py
ngc_inference/src/ngc_inference/orchestrators/: __init__.py  experiment_manager.py  simulation_runner.py
ngc_inference/src/ngc_inference/simulations/: AGENTS.md  __init__.py  hierarchical_inference.py  simple_prediction.py
ngc_inference/src/ngc_inference/utils/: __init__.py  logging_config.py  metrics.py  visualization.py
ngc_inference/tests/: README.md  __init__.py  test_ngclearn_integration.py
ngc_inference/tests/integration/: __init__.py  test_active_inference_agent.py  test_hierarchical_agent.py  test_simple_agent.py
ngc_inference/tests/simulations/: __init__.py  test_complete_workflow.py
ngc_inference/tests/unit/: __init__.py  test_free_energy.py  test_metrics.py  test_transition_model.py
